--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,28 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "Wails Dev",
-      "type": "shell",
-      "command": "wails dev",
-      "group": "build",
-      "isBackground": true,
-      "problemMatcher": []
-    }
-  ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "Wails Dev",
+			"type": "shell",
+			"command": "wails dev",
+			"group": "build",
+			"isBackground": true,
+			"problemMatcher": []
+		},
+		{
+			"label": "Format Frontend",
+			"type": "shell",
+			"command": "npm run format",
+			"group": "build",
+			"options": {
+				"cwd": "${workspaceFolder}/frontend"
+			},
+			"presentation": {
+				"echo": true,
+				"reveal": "silent",
+				"focus": false,
+				"panel": "shared"
+			}
+		}
+	]
 }
